--- a/modules/tests/Makefile
+++ b/modules/tests/Makefile
@@ -80,11 +80,10 @@ tests := tst-pthread.so tst-ramdisk.so tst-vblk.so tst-bsd-evh.so \
 	tst-zfs-mount.so tst-regex.so tst-tcp-siocoutq.so \
 	libtls.so tst-tls.so tst-select-timeout.so tst-faccessat.so \
 	tst-fstatat.so misc-reboot.so tst-fcntl.so payload-namespace.so \
-	tst-namespace.so tst-without-namespace.so
+	tst-namespace.so tst-without-namespace.so testrunner.so
 
 #	libstatic-thread-variable.so tst-static-thread-variable.so \
 
-tests += testrunner.so
 
 # Tests with special compilation parameters needed...
 $(out)/tests/tst-mmap.so: COMMON += -Wl,-z,now
