nfs: Add nfs client and corresponding unit tests

--- a/modules/tests/Makefile
+++ b/modules/tests/Makefile
@@ -83,6 +83,8 @@ tests := tst-pthread.so tst-ramdisk.so tst-vblk.so tst-bsd-evh.so \
 	tst-namespace.so tst-without-namespace.so payload-env.so \
 	payload-merge-env.so testrunner.so
 
+tests-nfs := tst-nfs.so
+
 #	libstatic-thread-variable.so tst-static-thread-variable.so \
 
 tests += testrunner.so
@@ -142,15 +144,19 @@ $(solaris-tests:%=$(out)/tests/%): COMMON+= \
 
 all_tests := $(tests:%=tests/%)
 
+all_nfs_tests := $(tests-nfs:%=tests-nfs/%)
+
 # Automatically generate usr.manifest which includes all tests.
-usr.manifest: $(all_tests:%=$(out)/%) $(lastword $(MAKEFILE_LIST)) usr.manifest.skel
+usr.manifest: $(all_tests:%=$(out)/%) $(all_nfs_tests:%=$(out)/%) $(lastword $(MAKEFILE_LIST)) usr.manifest.skel
 	@echo "  generating modules/tests/usr.manifest"
 	@cat $@.skel > $@
 	@echo $(all_tests) | tr ' ' '\n' | awk '{print "/" $$0 ": ./" $$0}' >> $@
+	@echo $(all_nfs_tests) | tr ' ' '\n' | awk '{print "/" $$0 ": ./" $$0}' >> $@
 
 clean:
 	-rm -f usr.manifest
 
 ifneq ($(MAKECMDGOALS),clean)
 include $(shell test -d $(out)/tests && find $(out)/tests -name '*.d')
+include $(shell test -d $(out)/tests-nfs && find $(out)/tests-nfs -name '*.d')
 endif
