--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ modules/httpserver-jolokia-plugin/obj/
 modules/httpserver-jvm-plugin/autogen/
 modules/httpserver-jvm-plugin/jvm.so
 modules/httpserver-jvm-plugin/obj/
+
+external/fs/unfs3-0.9.22/*
