--- a/.gitmodules
+++ b/.gitmodules
@@ -51,3 +51,6 @@
 [submodule "external/fs/libnfs"]
 	path = external/fs/libnfs
 	url = https://github.com/sahlberg/libnfs.git
+[submodule "external/fs/nfs-ganesha"]
+	path = external/fs/nfs-ganesha
+	url = https://github.com/nfs-ganesha/nfs-ganesha.git
