nfs: Add nfs server
This NFS server will be used for the unit tests.

It's done this way because nfs-kernel-server is broken
on some distribution due to systemd introduction without
corresponding unit files.

nfs-ganesha was not usable because it is not currently
packaged for debian.

Signed-off-by: Benoît Canet <benoit@scylladb.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -51,3 +51,6 @@
 [submodule "external/fs/libnfs"]
 	path = external/fs/libnfs
 	url = https://github.com/sahlberg/libnfs.git
+[submodule "external/fs/unfsd"]
+	path = external/fs/unfsd
+	url = https://github.com/benoit-canet/unfsd.git
